se modifico datos internos de la capa logica

--- a/ENE/CapaPresentacion.csproj
+++ b/ENE/CapaPresentacion.csproj
@@ -143,5 +143,11 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CapaLogica\CapaLogica.csproj">
+      <Project>{891ba88e-887a-4372-ad26-2b985920352d}</Project>
+      <Name>CapaLogica</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
